--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 	<link rel="stylesheet" type="text/css" href="styles.css">
 	<link href="https://fonts.googleapis.com/css2?family=Commissioner:wght@300&family=Condiment&family=Lato:wght@900&display=swap" rel="stylesheet">
 	<link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+	<link rel="icon" type="image/x-icon" href="/img/favicon.ico">
 </head>
 <body>
 	<div class="loader">
@@ -22,7 +23,7 @@
     			<li class="li2"><a href="#about">About</a></li>
     			<li class="li2"><a href="#skills">Skills</a></li>
     			<li class="li2"><a href="#projects">Projects</a></li>
-    			<a href="adeagbotobi@gmail.com" class="nav-btn">Hire Me</a>
+    			<a href="mailto:adeagbotobi@gmail.com" class="nav-btn">Hire Me</a>
     		</ul>
     	</div>
     	<div class="sidebar">
@@ -122,7 +123,7 @@
 			    <h3 class="contact-title">Get In Touch</h3>
 			    <h2 class="contact-tagline">If you like my work or I can help.</h2>
 			    <h4 class="p2">If you have a project that you want to get started, think you need my help with something or just fancy saying hey, then get in touch.</h4>
-			    <a class="nav-btn" href="adeagbotobi@gmail.com">MESSAGE ME</a>
+			    <a class="nav-btn" href="mailto:adeagbotobi@gmail.com">MESSAGE ME</a>
                 <img class="svg6" src="svg/circle.svg" alt="">
     	        <img class="svg7" src="svg/square-rl.svg" alt="">
 	        </div>
