--- a/index.html
+++ b/index.html
@@ -102,16 +102,16 @@
     	<h3 class="project-title">Projects</h3>
     	<div class="projects-container">
 			<div class="project">
-				<a href="https://github.com/tobbystar/oluwatobi-clothing"><img class="pro-img" src="img/project1.png"></a>
-				<h2>Sorting Visualizer</h2>
+				<a href="https://github.com/tobbystar/movie-app"><img class="pro-img" src="img/project1.jpg"></a>
+				<h2>movie-app</h2>
 			</div>
 			<div class="project">
-				<a href="https://github.com/tobbystar/Build-a-Random-Quote-Machine"><img class="pro-img" src="img/project2.png"></a>
+				<a href="https://github.com/tobbystar/Build-a-Random-Quote-Machine"><img class="pro-img" src="img/project2.jpg"></a>
 				<h2>Product Landing Page</h2>
 			</div>
 			<div class="project">
-				<a href="https://github.com/tobbystar/monster-rolodex"><img class="pro-img" src="img/project3.png"></a>
-				<h2>Gaming Landing Page</h2>
+				<a href="https://github.com/tobbystar/oluwatobi-clothing"><img class="pro-img" src="img/project3.jpg"></a>
+				<h2>oluwatobi-clothing</h2>
 			</div>
     	</div>
     	<a href="https://github.com/tobbystar" class="nav-btn pos2">More Projects</a>
