--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 				testing and debugging web applications using JavaScript, React, HTML5, CSS and Jquery.
 				My focus is on meeting user and business
 				needs by accurately translating design mockups to functional and responsive frontend design.</h4>
-            <a src="img/ADEAGBO Oluwatobi CV...pdf" class="nav-btn pos">Resume</a>
+            <a href="/img/OLUWATOBI ADEAGBO CV..pdf" class="nav-btn pos">Resume</a>
     	</div>
 
     </section>
@@ -81,7 +81,7 @@
     		<h3 class="h3">Experience</h3>
     		<h4 class="h4 imp">Front-End Intern</h4>
     		<h4 class="h4 imp2">monster-rolodex</h4>
-    		<h4 class="h4 imp2">Building a Drum Machine</h4>
+    		<h4 class="h4 imp2">movie-app</h4>
     		<h4 class="h4 imp2">Oluwatobi-clothing</h4>
     		<h4 class="h4 imp2">auto-text-effect</h4>
 
@@ -106,8 +106,8 @@
 				<h2>movie-app</h2>
 			</div>
 			<div class="project">
-				<a href="https://github.com/tobbystar/Build-a-Random-Quote-Machine"><img class="pro-img" src="img/project2.jpg"></a>
-				<h2>Product Landing Page</h2>
+				<a href="https://github.com/tobbystar/monsters"><img class="pro-img" src="img/project2.jpg"></a>
+				<h2>monsters</h2>
 			</div>
 			<div class="project">
 				<a href="https://github.com/tobbystar/oluwatobi-clothing"><img class="pro-img" src="img/project3.jpg"></a>
