--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
     	</div>
     	<div class="nav">
     		<ul>
-    			<li class="li2"><a href="#about">About</a></li>
-    			<li class="li2"><a href="#skills">Skills</a></li>
-    			<li class="li2"><a href="#projects">Projects</a></li>
+    			<li class="li2"><a href="#about" class="nav-btn">About</a></li>
+    			<li class="li2"><a href="#skills" class="nav-btn">Skills</a></li>
+    			<li class="li2"><a href="#projects " class="nav-btn">Projects</a></li>
     			<a href="mailto:adeagbotobi@gmail.com" class="nav-btn">Hire Me</a>
     		</ul>
     	</div>
