--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 				testing and debugging web applications using JavaScript, React, HTML5, CSS and Jquery.
 				My focus is on meeting user and business
 				needs by accurately translating design mockups to functional and responsive frontend design.</h4>
-            <a href="/img/OLUWATOBI ADEAGBO CV..pdf" class="nav-btn pos">Resume</a>
+            <a href="/img/Adeagbo_Oluwatobi_Resume_29-11-2022-12-33-33.pdf" class="nav-btn pos">Resume</a>
     	</div>
 
     </section>
